@@ -3017,9 +3017,10 @@ CMapEngine::UpdateTriggers()
   // check to see which trigger we're on
   int trigger = -1;
   for (unsigned i = 0; i < m_Triggers.size(); i++) {
-    if (abs(m_Triggers[i].x - location_x) < tile_width  / 2 &&
-        abs(m_Triggers[i].y - location_y) < tile_height / 2 &&
-        m_Triggers[i].layer == location_l) {
+    int dx = m_Triggers[i].x - location_x;
+    int dy = m_Triggers[i].y - location_y;
+    if (dx < tile_width / 2 && dx >= -tile_width / 2 &&
+        dy < tile_height / 2 && dy >= -tile_height / 2) {
       trigger = i;
       break;
     }
